package org.lpw.tephra.dao.orm.hibernate;

import org.lpw.tephra.dao.Connection;

/**
 * Hibernate Session管理器。
 *
 * @author lpw
 */
public interface Session extends Connection<org.hibernate.Session> {
}
